package app.http;

public enum Method {
    GET,
    POST,
    PUT,
    DELETE
}
