package card;

public enum ELEMENT {
    WATER,
    FIRE,
    NORMAL
}
