package server.models;

public class UserModel {

}
