@startuml
class Controller{
}
class BattleController extends Controller{
}
class BattleDirectController extends Controller{
}
class CardController extends Controller{
}
class TradingController extends Controller{
}
class UserController extends Controller{
}

class BattleDao{
}
class CardDao implements Dao{
}
interface Dao{
}
class DeckDao{
}
class PackageDao{
}
class TradeDao implements Dao{
}
class UserDao implements Dao{
}

enum ContentType{
    HTML,
    TEXT,
    JSON
}
enum HttpStatus{
    OK(200, "OK"),
    CREATED(201, "CREATED"),
    BAD_REQUEST(400, "Bad Request"),
    NO_CONTENT(204, "No Content"),
    UNAUTHORIZED(401, "Unauthorized"),
    FORBIDDEN(403, "Forbidden"),
    NOT_FOUND(404, "Not Found"),
    CONFLICT(409, "Conflict"),
    INTERNAL_SERVER_ERROR(500, "Internal Server Error");
}
enum Method{
     GET,
     POST,
     PUT,
     DELETE
}

class BattleModel{
}
class Card{
}
class TradingDeal{
}
class UserModel{
}

class Request{
}
class RequestHandler{
}
class Response{
}
class Server{
}
Interface ServerApp{
}

class DatabaseService{
}

class App implements ServerApp{
}

class Battle{
}

enum TYPE{
    SPELL,
    MONSTER
}
enum ELEMENT{
    WATER,
    FIRE,
    NORMAL
}
class CardGenerator{
}
class CollectionOfCards{
}
class Deck extends CollectionOfCards{
}
class Package{
}
class StackOfCards extends CollectionOfCards{
}

class User{
}

User --> Deck
User --> Stack

Deck --> Card

Stack --> Card

Card --> TYPE
Card --> ELEMENT

@enduml